src/tests/text_document/snapshots/texlab__tests__text_document__document_symbol__enumerate_flat.snap
---
source: src/tests/text_document/document_symbol.rs
expression: result.response
---
[
  {
    "name": "Enumerate",
    "kind": 10,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 4,
          "character": 0
        },
        "end": {
          "line": 9,
          "character": 15
        }
      }
    }
  },
  {
    "name": "Item",
    "kind": 22,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 5,
          "character": 27
        }
      }
    }
  },
  {
    "name": "Item",
    "kind": 22,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 6,
          "character": 4
        },
        "end": {
          "line": 6,
          "character": 27
        }
      }
    }
  },
  {
    "name": "Baz",
    "kind": 22,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 7,
          "character": 4
        },
        "end": {
          "line": 7,
          "character": 18
        }
      }
    }
  },
  {
    "name": "Qux",
    "kind": 22,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 8,
          "character": 4
        },
        "end": {
          "line": 8,
          "character": 32
        }
      }
    }
  }
]
