src/tests/text_document/snapshots/texlab__tests__text_document__document_symbol__ignored_patterns.snap
---
source: src/tests/text_document/document_symbol.rs
expression: result.response
---
[
  {
    "name": "Equation",
    "kind": 14,
    "deprecated": false,
    "location": {
      "uri": "[tmp]/main.tex",
      "range": {
        "start": {
          "line": 4,
          "character": 0
        },
        "end": {
          "line": 6,
          "character": 14
        }
      }
    }
  }
]
